--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% load static%}<!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="static/img/logo.png">
+    <link rel="icon" href="{% static '/img/logo.png' %}">
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
@@ -10,19 +10,34 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="/static/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}">
 
-    <link rel="stylesheet" href="/static/css/all.css">
+    <link rel="stylesheet" href="{% static '/css/all.css' %}">
   </head>
 
   <style>
     .my-color{
     color: white;
-    background-color: #8B4513;
+    background-color: #834403;
     }
     .spinner-color {
-      color: #8B4513;
+      color: #834403;
+    }
+    .my-color:hover {
+      color: #bdbdbd;
+    }
+    .text-footer{
+      color: #bdbdbd;
+    }
+    .text-footer:visited {
+      color: #bdbdbd;
+    }
+    .text-footer:link {
+      color: #9c94b8;
+    }
+    .text-footer:hover {
+      color: #949494;
     }
 
     #progressbar {
@@ -42,28 +57,28 @@
     <!-- <ul class="nav navbar-success bg-success"> -->
     <ul class="nav my-color">
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="/" style="color:white">
-          &nbsp <img src="static/img/logo.png" alt="" width="15">
+        <a class="nav-link my-color" aria-current="page" href="/">
+          &nbsp <img src="{% static '/img/logo.png' %}" alt="" width="15">
           ChoCoTeX
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link ShowTipsBtn" aria-current="page" style="color:white">
+        <a class="nav-link ShowTipsBtn my-color" aria-current="page">
           <i class="fas fa-question-circle"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" data-bs-toggle="modal" data-bs-target="#packModal" style="color:white">
+        <a class="nav-link my-color" aria-current="page" data-bs-toggle="modal" data-bs-target="#packModal">
           <i class="fas fa-truck-loading"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" data-bs-toggle="modal" data-bs-target="#logModal" style="color:white">
+        <a class="nav-link my-color" aria-current="page" data-bs-toggle="modal" data-bs-target="#logModal">
           <i class="fas fa-bug"></i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="https://github.com/DamienMinenna/ChoCoTeX" target="_blank" style="color:white">
+        <a class="nav-link my-color" aria-current="page" href="https://github.com/DamienMinenna/ChoCoTeX" target="_blank">
          <i class="fab fa-github-square"></i>
         </a>
       </li>
@@ -263,7 +278,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container bottom-margin">
-        <span class="text-muted">© 2021 <a href="https://damienminenna.github.io/" target="_blank">Damien Minenna</a></span>
+        <span class="text-footer"><a class="text-footer" href="https://damienminenna.github.io/" target="_blank">© 2021 Damien Minenna</a></span>
       </div>
     </footer>
 
@@ -273,10 +288,10 @@
       }
     </style>
 
-    <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script language="JavaScript" type="text/javascript" src="static/js/jquery-3.6.0.min.js"></script>
-    <script src="static/js/bootstrap.bundle.min.js"></script> -->
+    <!-- <script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script language="JavaScript" type="text/javascript" src="{% static '/js/jquery-3.6.0.min.js' %}"></script>
+    <script src="{% static '/js/bootstrap.bundle.min.js' %}"></script>
 
     {% if display_pdf %}
     <script>
