--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="{% static '/img/logo.png' %}">
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi">
+    <!-- <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi"> -->
     <title>ChoCoTeX</title>
 
     <!--Import Google Icon Font-->
